--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h3><a href="http://ruuvi.com">Ruuvi.com</a></h3>
+<p>You can join Ruuvi Community <a href="by requesting an invitation">http://ruuvi.com/blog/ruuvi-slack-com.html</a>
+</p>
 </body>
 </html>
