--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h3><a href="http://ruuvi.com">Ruuvi.com</a></h3>
-<p>You can join Ruuvi Community <a href="http://ruuvi.com/blog/ruuvi-slack-com.html">by requesting an invitation</a>
+<p>You can join our Ruuvi Community <a href="http://ruuvi.com/blog/ruuvi-slack-com.html">by requesting an invitation</a>.
 </p>
 </body>
 </html>
